--- a/Views/RestaurantInfo/Index.cshtml
+++ b/Views/RestaurantInfo/Index.cshtml
@@ -7,25 +7,25 @@
 }
 
 <div class="my-div">
-    <h1>Index</h1>
+    <h1>Restauranginformation</h1>
 
     <p>
         @if (User.Identity.IsAuthenticated)
         {
-            <a asp-action="Create">Create New</a>
+            <a asp-action="Create">Skapa ny Restauranginformation</a>
         }
     </p>
     <table class="table">
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.Name)
+                    @*@Html.DisplayNameFor(model => model.Name)*@Namn
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Open)
+                    @*@Html.DisplayNameFor(model => model.Open)*@Öppet
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Closed)
+                    @*@Html.DisplayNameFor(model => model.Closed)*@Stängt
                 </th>
                 <th></th>
             </tr>
@@ -46,9 +46,9 @@
                     <td>
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                            <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                            <a asp-action="Edit" asp-route-id="@item.Id">Redigera</a>
+                            <a asp-action="Details" asp-route-id="@item.Id">Detaljer</a>
+                            <a asp-action="Delete" asp-route-id="@item.Id">Ta bort</a>
                         }
 
                     </td>
