--- a/Views/MenuCategories/Create.cshtml
+++ b/Views/MenuCategories/Create.cshtml
@@ -6,21 +6,21 @@
 
 }
 <div class="my-div">
-    <h1>Create</h1>
+    @*<h1>Create</h1>*@
 
-    <h4>MenuCategory</h4>
+    <h1>Skapa ny menykategori</h1>
     <hr />
     <div class="row">
         <div class="col-md-4">
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Name" class="control-label"></label>
+                    <label asp-for="Name" class="control-label">Namn</label>
                     <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="MenuId" class="control-label"></label>
+                    <label asp-for="MenuId" class="control-label">Meny</label>
                     <select asp-for="MenuId" class="form-control" asp-items="@ViewBag.MenuId"></select>
                 </div>
                 <div class="form-group">
@@ -31,7 +31,7 @@
     </div>
 
     <div>
-        <a asp-controller="Menus" asp-action="Index">Back to List</a>
+        <a asp-controller="Menus" asp-action="Index">Tillbaka till lista</a>
     </div>
 </div>
 
