--- a/Views/MenuCategories/Delete.cshtml
+++ b/Views/MenuCategories/Delete.cshtml
@@ -7,31 +7,31 @@
 }
 
 <div class="my-div">
-    <h1>Delete</h1>
+    <h1>Ta bort</h1>
 
-    <h3>Are you sure you want to delete this?</h3>
+    <h3>Är du säker på att du vill ta bort detta?</h3>
     <div>
-        <h4>MenuCategory</h4>
+        <h4>Menykategori</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Name)
+                @*@Html.DisplayNameFor(model => model.Name)*@Namn
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Name)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Menu)
+                @*@Html.DisplayNameFor(model => model.Menu)*@Meny
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Menu.Id)
+                @Html.DisplayFor(model => model.Menu.Name)
             </dd>
         </dl>
 
         <form asp-action="Delete">
             <input type="hidden" asp-for="Id" />
-            <input type="submit" value="Delete" class="btn btn-danger" /> |
-            <a asp-controller="Menus" asp-action="Index">Back to List</a>
+            <input type="submit" value="Ta bort" class="btn btn-danger" /> |
+            <a asp-controller="Menus" asp-action="Index">Tillbaka till lista</a>
             @*<a asp-action="Index"  asp-route-id="@Model.MenuId">Back to List</a>*@
         </form>
     </div>
