--- a/Views/MenuCategories/Details.cshtml
+++ b/Views/MenuCategories/Details.cshtml
@@ -7,29 +7,29 @@
 }
 
 <div class="my-div">
-    <h1>Details</h1>
+    <h1>Detaljer</h1>
 
     <div>
-        <h4>MenuCategory</h4>
+        <h4>Menykategori</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Name)
+                @*@Html.DisplayNameFor(model => model.Name)*@Namn
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Name)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Menu)
+                @*@Html.DisplayNameFor(model => model.Menu)*@Meny
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Menu.Id)
+                @Html.DisplayFor(model => model.Menu.Name)
             </dd>
         </dl>
     </div>
     <div>
-        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-        <a asp-controller="Menus" asp-action="Index">Back to List</a>
+        <a asp-action="Edit" asp-route-id="@Model.Id">Redigera</a> |
+        <a asp-controller="Menus" asp-action="Index">Tillbaka till lista</a>
         @*<a asp-action="Index"  asp-route-id="@Model.MenuId">Back to List</a>*@
     </div>
 </div>
