--- a/Views/MenuItems/Create.cshtml
+++ b/Views/MenuItems/Create.cshtml
@@ -7,36 +7,36 @@
 }
 
 <div class="my-div">
-    <h1>Create</h1>
+    @*<h1>Create</h1>*@
 
-    <h4>MenuItems</h4>
+    <h4>Menyalternativ</h4>
     <hr />
     <div class="row">
         <div class="col-md-4">
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Name" class="control-label"></label>
+                    <label asp-for="Name" class="control-label">Namn</label>
                     <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Description" class="control-label"></label>
+                    <label asp-for="Description" class="control-label">Beskrivning</label>
                     <input asp-for="Description" class="form-control" />
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Allergies" class="control-label"></label>
+                    <label asp-for="Allergies" class="control-label">Allergier</label>
                     <input asp-for="Allergies" class="form-control" />
                     <span asp-validation-for="Allergies" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Price" class="control-label"></label>
+                    <label asp-for="Price" class="control-label">Pris</label>
                     <input asp-for="Price" class="form-control" />
                     <span asp-validation-for="Price" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="MenuCategoryId" class="control-label"></label>
+                    <label asp-for="MenuCategoryId" class="control-label">Menykategori</label>
                     <select asp-for="MenuCategoryId" class="form-control" asp-items="ViewBag.MenuCatId"></select>
                 </div>
                 <div class="form-group">
@@ -47,7 +47,7 @@
     </div>
 
     <div>
-        <a asp-controller="Menus" asp-action="Index">Back to List</a>
+        <a asp-controller="Menus" asp-action="Index">Tillbaka till lista</a>
     </div>
 </div>
 
