--- a/Views/MenuItems/Delete.cshtml
+++ b/Views/MenuItems/Delete.cshtml
@@ -7,49 +7,49 @@
 }
 
 <div class="my-div">
-    <h1>Delete</h1>
+    <h1>Ta bort</h1>
 
-    <h3>Are you sure you want to delete this?</h3>
+    <h3>Är du säker på att du vill ta bort detta?</h3>
     <div>
-        <h4>MenuItems</h4>
+        <h4>Menyalternativ</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Name)
+                @*@Html.DisplayNameFor(model => model.Name)*@Namn
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Name)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Description)
+                @*@Html.DisplayNameFor(model => model.Description)*@Beskrivning
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Description)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Allergies)
+                @*@Html.DisplayNameFor(model => model.Allergies)*@Allergier
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Allergies)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Price)
+                @*@Html.DisplayNameFor(model => model.Price)*@Pris
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Price)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.MenuCategory)
+                @*@Html.DisplayNameFor(model => model.MenuCategory)*@Menykategori
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.MenuCategory.Id)
+                @Html.DisplayFor(model => model.MenuCategory.Name)
             </dd>
         </dl>
 
         <form asp-action="Delete">
             <input type="hidden" asp-for="Id" />
-            <input type="submit" value="Delete" class="btn btn-danger" /> |
-            <a asp-controller="Menus" asp-action="Index">Back to List</a>
+            <input type="submit" value="Ta bort" class="btn btn-danger" /> |
+            <a asp-controller="Menus" asp-action="Index">Tillbaka till lista</a>
             @*asp-route-id="@Model.MenuCategoryId"*@
         </form>
     </div>
