--- a/Views/MenuItems/Edit.cshtml
+++ b/Views/MenuItems/Edit.cshtml
@@ -7,9 +7,9 @@
 }
 
 <div class="my-div">
-    <h1>Edit</h1>
+    <h1>Redigera</h1>
 
-    <h4>MenuItems</h4>
+    <h4>Menyalternativ</h4>
     <hr />
     <div class="row">
         <div class="col-md-4">
@@ -17,32 +17,32 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="Id" />
                 <div class="form-group">
-                    <label asp-for="Name" class="control-label"></label>
+                    <label asp-for="Name" class="control-label">Namn</label>
                     <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Description" class="control-label"></label>
+                    <label asp-for="Description" class="control-label">Beskrivning</label>
                     <input asp-for="Description" class="form-control" />
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Allergies" class="control-label"></label>
+                    <label asp-for="Allergies" class="control-label">Allergier</label>
                     <input asp-for="Allergies" class="form-control" />
                     <span asp-validation-for="Allergies" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Price" class="control-label"></label>
+                    <label asp-for="Price" class="control-label">Pris</label>
                     <input asp-for="Price" class="form-control" />
                     <span asp-validation-for="Price" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="MenuCategoryId" class="control-label"></label>
+                    <label asp-for="MenuCategoryId" class="control-label">Menykategori</label>
                     <select asp-for="MenuCategoryId" class="form-control" asp-items="ViewBag.MenuCatId"></select>
                     <span asp-validation-for="MenuCategoryId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" />
+                    <input type="submit" value="OK" class="btn btn-primary" />
                 </div>
             </form>
         </div>
@@ -50,7 +50,7 @@
 
     <div>
         @*<a asp-action="Index" asp-route-id="@Model.MenuCategoryId">Back to List</a>*@
-        <a asp-controller="Menus" asp-action="Index">Back to List</a>
+        <a asp-controller="Menus" asp-action="Index">Tillbaka till lista</a>
     </div>
 </div>
 
