--- a/Views/Menus/Create.cshtml
+++ b/Views/Menus/Create.cshtml
@@ -7,16 +7,16 @@
 }
 
 <div class="my-div">
-    <h1>Create</h1>
+    @*<h1>Create</h1>*@
 
-    <h4>Menu</h4>
+    <h4>Meny</h4>
     <hr />
     <div class="row">
         <div class="col-md-4">
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Name" class="control-label"></label>
+                    <label asp-for="Name" class="control-label">Namn</label>
                     <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
@@ -28,7 +28,7 @@
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Tillbaka till Lista</a>
     </div>
 </div>
 
