--- a/Views/Menus/Details.cshtml
+++ b/Views/Menus/Details.cshtml
@@ -8,14 +8,14 @@
 }
 
 <div class="my-div">
-    <h1>Details</h1>
+    <h1>Detaljer</h1>
 
     <div>
-        <h4>Menu</h4>
+        <h4>Meny</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Name)
+                @*@Html.DisplayNameFor(model => model.Name)*@Namn
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Name)
@@ -23,7 +23,7 @@
         </dl>
     </div>
     <div>
-        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Edit" asp-route-id="@Model.Id">Redigera</a> |
+        <a asp-action="Index">Tillbaka till lista</a>
     </div>
 </div>
