--- a/Views/Menus/Index.cshtml
+++ b/Views/Menus/Index.cshtml
@@ -8,16 +8,16 @@
     }
 }
 <div class="my-div">
-    <h1>Index</h1>
+    <h1>Meny</h1>
 
     <p>
-        <a asp-action="Create">+ MENU</a>
+        <a asp-action="Create">+ Skapa ny Huvudkategori</a>
     </p>
     <p>
-        <a asp-controller="MenuCategories" asp-action="Create">+ MENUCATEGORY</a>
+        <a asp-controller="MenuCategories" asp-action="Create">+ Skapa ny Underkategori</a>
     </p>
     <p>
-        <a asp-controller="MenuItems" asp-action="Create">+ ITEM</a>
+        <a asp-controller="MenuItems" asp-action="Create">+ Skapa ny Maträtt/Dryck</a>
     </p>
 
 
@@ -32,9 +32,9 @@
 
                 @if (User.Identity.IsAuthenticated)
                 {
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Redigera</a>
+                    <a asp-action="Details" asp-route-id="@item.Id">Detaljer</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id">Ta bort</a>
                 }
 
             </div>
@@ -50,9 +50,9 @@
                     </h2>
                     <div>
                         @*<a asp-controller="MenuCategories" asp-action="Index" asp-route-id="@item.Id">Open</a>*@
-                        <a asp-controller="MenuCategories" asp-action="Edit" asp-route-id="@item2.Id">Edit</a> |
-                        <a asp-controller="MenuCategories" asp-action="Details" asp-route-id="@item2.Id">Details</a> |
-                        <a asp-controller="MenuCategories" asp-action="Delete" asp-route-id="@item2.Id">Delete</a>
+                        <a asp-controller="MenuCategories" asp-action="Edit" asp-route-id="@item2.Id">Redigera</a> |
+                        <a asp-controller="MenuCategories" asp-action="Details" asp-route-id="@item2.Id">Detaljer</a> |
+                        <a asp-controller="MenuCategories" asp-action="Delete" asp-route-id="@item2.Id">Ta bort</a>
                     </div>
                 </div>
 
@@ -77,9 +77,9 @@
                             <div>
                                 @*<a asp-controller="MenuItems" asp-action="Index" asp-route-id="@item2.Id">Open</a>*@
 
-                                <a asp-controller="MenuItems" asp-action="Edit" asp-route-id="@item3.Id">Edit</a> |
-                                <a asp-controller="MenuItems" asp-action="Details" asp-route-id="@item3.Id">Details</a> |
-                                <a asp-controller="MenuItems" asp-action="Delete" asp-route-id="@item3.Id">Delete</a>
+                                <a asp-controller="MenuItems" asp-action="Edit" asp-route-id="@item3.Id">Redigera</a> |
+                                <a asp-controller="MenuItems" asp-action="Details" asp-route-id="@item3.Id">Detaljer</a> |
+                                <a asp-controller="MenuItems" asp-action="Delete" asp-route-id="@item3.Id">Ta bort</a>
                             </div>
                         </div>
                     }
@@ -88,73 +88,3 @@
         }
     }
 </div>
-@*@model IEnumerable<ResAktWebb.Models.Menu>
-
-    @{
-        ViewData["Title"] = "Index";
-    }
-
-    <h1>Index</h1>
-
-    <p>
-        <a asp-action="Create">Create New</a>
-    </p>
-
-    @foreach (var item in Model)
-    {
-        <div style="background:#757575">
-            <h1>
-                @Html.DisplayFor(modelItem => item.Name)
-            </h1>
-            <span>
-
-                @if (User.Identity.IsAuthenticated)
-                {
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                }
-
-            </span>
-        </div>
-
-        @foreach (var item2 in item.MenuCategory)
-        {
-            <div>
-                @if (item2.MenuId == item.Id)
-                {
-                    <div style="background:#B5B5B5">
-                        <h2>
-                            @item2.Name
-                        </h2>
-                        <span>
-                            <a asp-controller="MenuCategories" asp-action="Index" asp-route-id="@item.Id">Katergorier</a>
-                        </span>
-                    </div>
-
-                    @foreach (var item3 in item2.MenuItems)
-                    {
-                        @if (item3.MenuCategoryId == item2.Id)
-                        {
-                            <h3 style="background:#EBEBEB">
-                                <p>
-                                    @item3.Name
-                                </p>
-                                <p>
-                                    @item3.Description
-                                </p>
-                                <p>
-                                    @item3.Allergies
-                                </p>
-                                <p>
-                                    @item3.Price
-                                </p>
-
-                            </h3>
-                        }
-                    }
-                }
-            </div>
-        }
-    }*@
-
