--- a/Views/Reservations/Delete.cshtml
+++ b/Views/Reservations/Delete.cshtml
@@ -7,39 +7,39 @@
 }
 
 <div class="my-div">
-    <h1>Delete</h1>
+    <h1>Ta bort</h1>
 
-    <h3>Are you sure you want to delete this?</h3>
+    <h3>Är du säker på att du vill ta bort detta?</h3>
     <div>
         <h4>Reservation</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.StartTime)
+                @*@Html.DisplayNameFor(model => model.StartTime)*@Starttid
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.StartTime)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.EndTime)
+                @*@Html.DisplayNameFor(model => model.EndTime)*@Sluttid
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.EndTime)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.CustomerName)
+                @*@Html.DisplayNameFor(model => model.CustomerName)*@Kundnamn
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.CustomerName)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.NumParticipants)
+                @*@Html.DisplayNameFor(model => model.NumParticipants)*@Antal deltagande
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.NumParticipants)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.TableNum)
+                @*@Html.DisplayNameFor(model => model.TableNum)*@Bordsnummer
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.TableNum)
@@ -48,8 +48,8 @@
 
         <form asp-action="Delete">
             <input type="hidden" asp-for="Id" />
-            <input type="submit" value="Delete" class="btn btn-danger" /> |
-            <a asp-action="Index">Back to List</a>
+            <input type="submit" value="Ta bort" class="btn btn-danger" /> |
+            <a asp-action="Index">Tillbaka till lista</a>
         </form>
     </div>
 </div>
