--- a/Views/Reservations/Details.cshtml
+++ b/Views/Reservations/Details.cshtml
@@ -7,38 +7,38 @@
 }
 
 <div class="my-div">
-    <h1>Details</h1>
+    <h1>Detaljer</h1>
 
     <div>
         <h4>Reservation</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.StartTime)
+                @*@Html.DisplayNameFor(model => model.StartTime)*@Starttid
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.StartTime)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.EndTime)
+                @*@Html.DisplayNameFor(model => model.EndTime)*@Sluttid
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.EndTime)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.CustomerName)
+                @*@Html.DisplayNameFor(model => model.CustomerName)*@Kundnamn
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.CustomerName)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.NumParticipants)
+                @*@Html.DisplayNameFor(model => model.NumParticipants)*@Antal deltagande
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.NumParticipants)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.TableNum)
+                @*@Html.DisplayNameFor(model => model.TableNum)*@Bordsnummer
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.TableNum)
@@ -46,7 +46,7 @@
         </dl>
     </div>
     <div>
-        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Edit" asp-route-id="@Model.Id">Redigera</a> |
+        <a asp-action="Index">Tillbaka till lista</a>
     </div>
 </div>
