--- a/Views/RestaurantInfo/Delete.cshtml
+++ b/Views/RestaurantInfo/Delete.cshtml
@@ -7,27 +7,27 @@
 }
 
 <div class="my-div">
-    <h1>Delete</h1>
+    <h1>Ta bort</h1>
 
-    <h3>Are you sure you want to delete this?</h3>
+    <h3>Är du säker på att du vill ta bort detta?</h3>
     <div>
-        <h4>RestaurantInfo</h4>
+        <h4>Restauranginformation</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Name)
+                @*@Html.DisplayNameFor(model => model.Name)*@Namn
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Name)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Open)
+                @*@Html.DisplayNameFor(model => model.Open)*@Öppet
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Open)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Closed)
+                @*@Html.DisplayNameFor(model => model.Closed)*@Stängt
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Closed)
@@ -36,8 +36,8 @@
 
         <form asp-action="Delete">
             <input type="hidden" asp-for="Id" />
-            <input type="submit" value="Delete" class="btn btn-danger" /> |
-            <a asp-action="Index">Back to List</a>
+            <input type="submit" value="Ta bort" class="btn btn-danger" /> |
+            <a asp-action="Index">Tillbaka till lista</a>
         </form>
     </div>
 </div>
