--- a/Views/RestaurantInfo/FullMenu.cshtml
+++ b/Views/RestaurantInfo/FullMenu.cshtml
@@ -8,7 +8,7 @@
 
 
 <div class="my-div">
-    <h1>Menu - Restaurang SeaSharp</h1>
+    <h1>Meny - Restaurang SeaSharp</h1>
 
 
     @foreach (var m in Model)
