--- a/Views/Guest/GetReservations.cshtml
+++ b/Views/Guest/GetReservations.cshtml
@@ -10,7 +10,7 @@
     <p>
         @Html.ActionLink("Reservera ett bord", "Create", "Reservations")
     </p>
-    <table class="table">
+    @*<table class="table">
         <thead>
             <tr>
                 <th>
@@ -31,7 +31,7 @@
                 <th></th>
             </tr>
         </thead>
-        <tbody>
+        <tbody>*@
     @*@foreach (var item in Model) {
             <tr>
                 <td>
@@ -54,8 +54,8 @@
                 </td>
             </tr>
     }*@
-        </tbody>
+        @*</tbody>
     </table>
-    <h4>Här ska gästens restaurangbokningar visas</h4>
+    <h4>Här ska gästens restaurangbokningar visas</h4>*@
 
 </div>
