--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
                                 <p class="dropdown-item">Restaurang</p>
                                 <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="RestaurantInfo">Öppettider</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="RestaurantInfo" asp-action="FullMenu">Meny</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="GetReservations">Reservera bord</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Reservations" asp-action="Create">Reservera bord</a>
                                 <div class="dropdown-divider"></div>
                                 <p class="dropdown-item">Aktiviteter</p>
                                 <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="GetActivities">Visa Aktiviteter</a>
