--- a/Views/Guest/GetActivities.cshtml
+++ b/Views/Guest/GetActivities.cshtml
@@ -33,7 +33,7 @@
                     @Html.DisplayFor(x => i.StartTime)
                 </td>
                 <td>
-                    <button onclick="clickedBookingButton(@Html.DisplayFor(x => i.Id))" id="@Html.DisplayFor(x => i.Id)" class="get_act">Boka</button>
+                    <button onclick="clickedBookingButton(@Html.DisplayFor(x => i.Id))" id="@Html.DisplayFor(x => i.Id)" class="get_act btn btn-primary">Boka</button>
                 </td>
                 @*<td> @Html.ActionLink("Boka", "Create", "ActivityBookings")</td>*@
             </tr>
