--- a/Views/Guest/GetActivities.cshtml
+++ b/Views/Guest/GetActivities.cshtml
@@ -128,7 +128,7 @@
 
 
 
-        
+
 </div>
 
 <div class="pop-fixed-box" id="csstest">
@@ -161,7 +161,7 @@
                         <input type="hidden" id="pop-form-aId" />
             </div>
             <div class="center-div">
-                <input type="button" value="Skapa Bokning" id="createActivityBooking" onclick="handleBookingForm()" />
+                <input type="button" class="btn btn-primary" value="Skapa Bokning" id="createActivityBooking" onclick="handleBookingForm()" />
             </div>
         </form>
     </div>
