--- a/Views/Guest/RestaurantInfo.cshtml
+++ b/Views/Guest/RestaurantInfo.cshtml
@@ -10,7 +10,7 @@
     @foreach (var item in Model)
     {
         <div>@ViewBag.OpenHours</div>
-        <div>@Html.DisplayFor(modelItem => item.Name): @Html.DisplayFor(modelItem => item.Open) - @Html.DisplayFor(modelItem => item.Closed)</div>
+        <div>@Html.DisplayFor(modelItem => item.DayName): @Html.DisplayFor(modelItem => item.Open) - @Html.DisplayFor(modelItem => item.Closed)</div>
     }
 
 
