--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ResAktWebb.Models.Admin
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
 }
 <div class="my-div">
     @using (Html.BeginForm())
