--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
                         @if (!User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Admin" asp-action="Index">Logga in</a>
+                                <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.78/GuestWebSite/Login">Logga in</a>
                             </li>
                         }
                         @if (User.Identity.IsAuthenticated)
