--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,13 +11,13 @@
 <body>
     <img class="kund" src="http://193.10.202.77/images/kund.jpg" />
     <p style="text-align: right">Kundservice</p>
-    @* HÄR INSERTAS BAKGRUNDSIMAGE *@
-
 
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background: rgba(255,127,80,0.6);
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow mb-3" style="background: rgba(255,127,80,0.6);
             width: 100%;">
-            <h1 class="rubrik1">Hotell SeaSharp</h1>
+           @* <img src="https://cdn4.iconfinder.com/data/icons/summer-v-2/512/ocean_sea_sun_sunny_sunset_vacation-512.png" width="50" height="50">*@
+
+            <h2 class="rubrik1">Hotell SeaSharp</h2>
 
             <div class="container">
                 @*<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Hotell SeaSharp</a>*@
@@ -40,27 +40,8 @@
                             <a class="nav-link text-dark" href="http://193.10.202.81/Seasharp">BOKA RUM</a>
                         </li>
 
-                        <style>
-                            .dropdown {
-                                position: relative;
-                                display: inline-block;
-                            }
 
-                            .dropdown-content {
-                                display: none;
-                                position: absolute;
-                                background-color: #f9f9f9;
-                                min-width: 160px;
-                                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                                padding: 12px 16px;
-                                z-index: 1;
-                            }
-
-                            .dropdown:hover .dropdown-content {
-                                display: block;
-                            }
-                        </style>
-                        <li class="dropdown nav-item">
+                        <li class="nav-item dropdown ">
                             <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">RESTAURANG & AKTIVITETER</a>
 
                             @*<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">testAktiviteter</a>*@
@@ -79,15 +60,16 @@
                         </li>
 
                         @*@ @Html.ActionLink("Visa aktiviteter", "GetActivities") @* Skall visa de aktiviteter som finns tillgängliga att boka in sig på
-        @Html.ActionLink("Restaurangen", "RestaurantInfo")  Skall ta fram kort information om restaurangen och kanske snabblänk till att boka ett bord
-        @Html.ActionLink("Mina Bokningar", null)  Skall visa vy för alla bokningar som finns under gästen, både aktiviteter och bokade bord i restaurang.
-        @Html.ActionLink("Reservera bord i restaurangen", "GetReservations")*@
+                    @Html.ActionLink("Restaurangen", "RestaurantInfo")  Skall ta fram kort information om restaurangen och kanske snabblänk till att boka ett bord
+                    @Html.ActionLink("Mina Bokningar", null)  Skall visa vy för alla bokningar som finns under gästen, både aktiviteter och bokade bord i restaurang.
+                    @Html.ActionLink("Reservera bord i restaurangen", "GetReservations")*@
 
                         @if (!User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.78/GuestWebSite/Login">Logga in</a>
                             </li>
+                            
                         }
                         @if (User.Identity.IsAuthenticated)
                         {
@@ -101,31 +83,34 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-
-            @RenderBody()
-
-
-            @*<div style="background-image: url('http://193.10.202.77/images/hotelbilden.jpg');">
-                    @RenderBody()
-                </div>*@
-        </main>
-    </div>
-    @*<img class="bild" src="http://193.10.202.77/images/hotelbilden.jpg" width="1400" height="900" align="middle" margin-left="auto" margin-right="auto" />*@
-    <footer class="border-top footer text-muted" style="position:fixed; left:0;bottom:0;">
+    @* Eventuell bakgrundsbild om vi skall ha vitt längst upp *@
+    @*<div class="bg-img">*@
         <div class="container">
-            &copy; 2021 - Hotell SeaSharp - <a asp-area="" asp-controller="Home" asp-action="Index">Till första sidan</a>
+            <main role="main" class="pb-3">
+
+                @RenderBody()
+
+
+                @*<div style="background-image: url('http://193.10.202.77/images/hotelbilden.jpg');">
+                        @RenderBody()
+                    </div>*@
+            </main>
         </div>
-    </footer>
+        @*<img class="bild" src="http://193.10.202.77/images/hotelbilden.jpg" width="1400" height="900" align="middle" margin-left="auto" margin-right="auto" />*@
+        <footer class="border-top footer text-muted" style="position:fixed; left:0;bottom:0;">
+            <div class="container">
+                &copy; 2021 - Hotell SeaSharp - <a asp-area="" asp-controller="Home" asp-action="Index">Till första sidan</a>
+            </div>
+        </footer>
 
 
 
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
+        @await RenderSectionAsync("Scripts", required: false)
+   @* </div>*@
 
 </body>
 </html>
