Försökt ordna till lite grann efter den nya layouten.
även fixat så att "HotellSeasharp" titeln i navbar är klickbar för att ta användare till "hem" sidan

Har konverterat createmethod för ActivityBookingsController.cs till att använda resthelper.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <img class="kund" src="http://193.10.202.77/images/kund.jpg" />
+    <img class="kund" alt="Kundservice-ikon" src="http://193.10.202.77/images/kund.jpg" />
     <p style="text-align: right">Kundservice</p>
 
     <header>
@@ -17,7 +17,7 @@
             width: 100%;">
            @* <img src="https://cdn4.iconfinder.com/data/icons/summer-v-2/512/ocean_sea_sun_sunny_sunset_vacation-512.png" width="50" height="50">*@
 
-            <h2 class="rubrik1">Hotell SeaSharp</h2>
+            <a class="my-link" href="http://193.10.202.78/GuestWebSite"><h2 class="rubrik1">Hotell SeaSharp</h2></a>
 
             <div class="container">
                 @*<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Hotell SeaSharp</a>*@
