fixat menygrejjer och skaffat den nya layoutfilen

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,23 +3,21 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - SeaSharp</title>
+    <title>@ViewData["Title"] - Restaurang & Aktiviteter</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link href="http://193.10.202.77/css/HotelSeasharp.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" />
+
+
 </head>
 <body>
-    <img class="kund" alt="Kundservice-ikon" src="http://193.10.202.77/images/kund.jpg" />
-    <p style="text-align: right">Kundservice</p>
 
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow mb-3" style="background: rgba(255,127,80,0.6);
-            width: 100%;">
-           @* <img src="https://cdn4.iconfinder.com/data/icons/summer-v-2/512/ocean_sea_sun_sunny_sunset_vacation-512.png" width="50" height="50">*@
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style=" background-color: lightgrey; background: rgba(211, 211, 211, 0.8); height: 40%;
+        width: 100%;">
+            <h1 class="rubrik1">Hotell SeaSharp</h1>
 
-            <a class="my-link" href="http://193.10.202.78/GuestWebSite"><h2 class="rubrik1">Hotell SeaSharp</h2></a>
-
-            <div class="container">
+            <div class="containeruppe">
                 @*<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Hotell SeaSharp</a>*@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +25,7 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                        <li class="nav-item"> 
                             <a class="nav-link text-dark" href="http://193.10.202.78/GuestWebSite">HEM</a>
                         </li>
                         <li class="nav-item">
@@ -59,58 +57,155 @@
                             </div>
                         </li>
 
-                        @*@ @Html.ActionLink("Visa aktiviteter", "GetActivities") @* Skall visa de aktiviteter som finns tillgängliga att boka in sig på
-                    @Html.ActionLink("Restaurangen", "RestaurantInfo")  Skall ta fram kort information om restaurangen och kanske snabblänk till att boka ett bord
-                    @Html.ActionLink("Mina Bokningar", null)  Skall visa vy för alla bokningar som finns under gästen, både aktiviteter och bokade bord i restaurang.
-                    @Html.ActionLink("Reservera bord i restaurangen", "GetReservations")*@
-
-                        @if (!User.Identity.IsAuthenticated)
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.78/GuestWebSite/Login">Logga in</a>
-                            </li>
-                            
-                        }
-                        @if (User.Identity.IsAuthenticated)
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Admin" asp-action="SignOut">Logga ut</a>
-                            </li>
-                        }
-
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    @* Eventuell bakgrundsbild om vi skall ha vitt längst upp *@
-    @*<div class="bg-img">*@
-        <div class="container">
-            <main role="main" class="pb-3">
-
-                @RenderBody()
-
-
-                @*<div style="background-image: url('http://193.10.202.77/images/hotelbilden.jpg');">
-                        @RenderBody()
-                    </div>*@
-            </main>
-        </div>
+    <div class="container">
+        @*<main role="main" class="pb-3">*@
+        @RenderBody()
+        @*</main>*@
+    </div>
+    <div>
         @*<img class="bild" src="http://193.10.202.77/images/hotelbilden.jpg" width="1400" height="900" align="middle" margin-left="auto" margin-right="auto" />*@
-        <footer class="border-top footer text-muted" style="position:fixed; left:0;bottom:0;">
-            <div class="container">
-                &copy; 2021 - Hotell SeaSharp - <a asp-area="" asp-controller="Home" asp-action="Index">Till första sidan</a>
-            </div>
-        </footer>
+    </div>
 
 
+    
 
+    <footer class="bottenFooter">
+        <div class="containernere">
+            &copy; 2021 - Hotell SeaSharp - <a asp-area="" asp-controller="Home" asp-action="Index">Till första sidan</a>
+        </div>
+    </footer>
 
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-        @await RenderSectionAsync("Scripts", required: false)
-   @* </div>*@
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 
 </body>
 </html>
+
+
+
+
+@* DEN GAMLA LAYOUTEN *@
+
+@* <!DOCTYPE html> *@
+@* <html lang="en"> *@
+@* <head> *@
+@*     <meta charset="utf-8" /> *@
+@*     <meta name="viewport" content="width=device-width, initial-scale=1.0" /> *@
+@*     <title>@ViewData["Title"] - SeaSharp</title> *@
+@*     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" /> *@
+@*     <link href="http://193.10.202.77/css/HotelSeasharp.css" rel="stylesheet" /> *@
+@*     <link rel="stylesheet" href="~/css/site.css" /> *@
+@* </head> *@
+@* <body> *@
+@*     <img class="kund" alt="Kundservice-ikon" src="http://193.10.202.77/images/kund.jpg" /> *@
+@*     <p style="text-align: right">Kundservice</p> *@
+@* *@
+@*     <header> *@
+@*         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow mb-3" style="background: rgba(255,127,80,0.6); *@
+@*             width: 100%;"> *@
+@*            $1$ <img src="https://cdn4.iconfinder.com/data/icons/summer-v-2/512/ocean_sea_sun_sunny_sunset_vacation-512.png" width="50" height="50">#1# *@
+@* *@
+@*             <a class="my-link" href="http://193.10.202.78/GuestWebSite"><h2 class="rubrik1">Hotell SeaSharp</h2></a> *@
+@* *@
+@*             <div class="container"> *@
+@*                 $1$<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Hotell SeaSharp</a>#1# *@
+@*                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent" *@
+@*                         aria-expanded="false" aria-label="Toggle navigation"> *@
+@*                     <span class="navbar-toggler-icon"></span> *@
+@*                 </button> *@
+@*                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between"> *@
+@*                     <ul class="navbar-nav flex-grow-1"> *@
+@*                         <li class="nav-item"> *@
+@*                             <a class="nav-link text-dark" href="http://193.10.202.78/GuestWebSite">HEM</a> *@
+@*                         </li> *@
+@*                         <li class="nav-item"> *@
+@*                             <a class="nav-link text-dark" href="http://193.10.202.77/KonferensrumSida">KONFERENSER</a> *@
+@*                         </li> *@
+@*                         <li class="nav-item"> *@
+@*                             <a class="nav-link text-dark" href="http://193.10.202.78/GuestWebSite">GÄST</a> *@
+@*                         </li> *@
+@*                         <li class="nav-item"> *@
+@*                             <a class="nav-link text-dark" href="http://193.10.202.81/Seasharp">BOKA RUM</a> *@
+@*                         </li> *@
+@* *@
+@* *@
+@*                         <li class="nav-item dropdown "> *@
+@*                             <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">RESTAURANG & AKTIVITETER</a> *@
+@* *@
+@*                             $1$<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">testAktiviteter</a>#1# *@
+@*                             <div class="nav-link text-dark dropdown-content"> *@
+@*                                 <p class="dropdown-item">Restaurang</p> *@
+@*                                 <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="RestaurantInfo">Öppettider</a> *@
+@*                                 <a class="dropdown-item" asp-area="" asp-controller="RestaurantInfo" asp-action="FullMenu">Meny</a> *@
+@*                                 <a class="dropdown-item" asp-area="" asp-controller="Reservations" asp-action="Create">Reservera bord</a> *@
+@*                                 <div class="dropdown-divider"></div> *@
+@*                                 <p class="dropdown-item">Aktiviteter</p> *@
+@*                                 <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="GetActivities">Visa Aktiviteter</a> *@
+@*                                 $1$<a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="#">Mina Bokningar</a>#1# *@
+@*                                 <div class="dropdown-divider"></div> *@
+@*                                 $1$<a class="dropdown-item" asp-controller="Admin" asp-action="Index">Logga in som Admin</a>#1# *@
+@*                             </div> *@
+@*                         </li> *@
+@* *@
+@*                         @* @Html.ActionLink("Visa aktiviteter", "GetActivities") @* Skall visa de aktiviteter som finns tillgängliga att boka in sig på *@
+@*                     @Html.ActionLink("Restaurangen", "RestaurantInfo")  Skall ta fram kort information om restaurangen och kanske snabblänk till att boka ett bord *@
+@*                     @Html.ActionLink("Mina Bokningar", null)  Skall visa vy för alla bokningar som finns under gästen, både aktiviteter och bokade bord i restaurang. *@
+@*                     @Html.ActionLink("Reservera bord i restaurangen", "GetReservations")*@ 
+@* *@
+@*                         @if (!User.Identity.IsAuthenticated) *@
+@*                         { *@
+@*                             <li class="nav-item"> *@
+@*                                 <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.78/GuestWebSite/Login">Logga in</a> *@
+@*                             </li> *@
+@*                              *@
+@*                         } *@
+@*                         @if (User.Identity.IsAuthenticated) *@
+@*                         { *@
+@*                             <li class="nav-item"> *@
+@*                                 <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Admin" asp-action="SignOut">Logga ut</a> *@
+@*                             </li> *@
+@*                         } *@
+@* *@
+@*                     </ul> *@
+@*                 </div> *@
+@*             </div> *@
+@*         </nav> *@
+@*     </header> *@
+@*     $1$ Eventuell bakgrundsbild om vi skall ha vitt längst upp #1# *@
+@*     $1$<div class="bg-img">#1# *@
+@*         <div class="container"> *@
+@*             <main role="main" class="pb-3"> *@
+@* *@
+@*                 @RenderBody() *@
+@* *@
+@* *@
+@*                 @*<div style="background-image: url('http://193.10.202.77/images/hotelbilden.jpg');"> *@
+@*                         @RenderBody() *@
+@*                     </div>*@ 
+@*             </main> *@
+@*         </div> *@
+@*         $1$<img class="bild" src="http://193.10.202.77/images/hotelbilden.jpg" width="1400" height="900" align="middle" margin-left="auto" margin-right="auto" />#1# *@
+@*         <footer class="border-top footer text-muted" style="position:fixed; left:0;bottom:0;"> *@
+@*             <div class="container"> *@
+@*                 &copy; 2021 - Hotell SeaSharp - <a asp-area="" asp-controller="Home" asp-action="Index">Till första sidan</a> *@
+@*             </div> *@
+@*         </footer> *@
+@* *@
+@* *@
+@* *@
+@* *@
+@*         <script src="~/lib/jquery/dist/jquery.min.js"></script> *@
+@*         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script> *@
+@*         <script src="~/js/site.js" asp-append-version="true"></script> *@
+@*         @await RenderSectionAsync("Scripts", required: false) *@
+@*    $1$ </div>#1# *@
+@* *@
+@* </body> *@
+@* </html> *@
