--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -31,6 +31,9 @@ header {
     font-weight: normal;
     
 }
+.container {
+    padding:10px !important;
+}
 .my-div {
     background-color: #fff;
     padding: 20px;
